# agentic-workbench

./: AGENTS.md  TODO.md  pnpm-lock.yaml
.specify/: feature.json
apps/agentic-workbench/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/src-tauri/src/application/: git_worktree_service.rs  mod.rs  send_prompt.rs
apps/desktop/src-tauri/src/domain/: mod.rs  run.rs
apps/desktop/src-tauri/src/inbound/: tauri_commands.rs
apps/desktop/src-tauri/src/infrastructure/: agent_catalog.rs  json_project_repository.rs  mod.rs  window_manager.rs
apps/desktop/src-tauri/src/infrastructure/acp/: runner.rs
apps/git-explorer/: package.json
docs/: acp-agent-command-override.md  acp-agent-ui-modularization-strategy.md  app-wide-acp-session-context-summary.md  git-explorer-monorepo-prerequisites.md  goal-feature-implementation.md  ralph-mode-implementation.md  task-status-mcp-interface-design.md
specs/002-show-tooluse-edit-diff/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-prompt-history-navigation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-mermaid-diagram-rendering/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-acp-command-override/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-agent-run-mermaid/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-markdown-quick-prompt/: data-model.md  plan.md  quickstart.md  research.md  (+2 more)
(+102 files in other folders)
