[package]
name = "acp-minimal-app"
version = "0.1.0"
description = "Minimal Tauri shell for ACP"
authors = ["you"]
edition = "2024"

[lib]
name = "acp_minimal_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
